fix dropdown gap

--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -17,12 +17,12 @@ nav {
 	padding: 8px;
 	/* border-bottom: 3px solid transparent; */
 	/* width: 4rem; */
-	/* position: relative; */
+	position: relative;
 }
 
 .links {
 	position: absolute;
-	margin-top: 10px;
+	margin-top: 9px;
 	height: fit-content;
 	text-decoration: none;
 	list-style: none;
